@@ -143,6 +143,7 @@
             <li><a href="#812">Can I prompt for user input (STDIN) in my Platypus-wrapped scripts?</a></li>
             <li><a href="#813">Is there a way to sign Platypus-generated apps so they don't require GateKeeper approval?</a></li>
             <li><a href="#814">Can I pass arguments to a Platypus-generated app via the command line?</a></li>
+            <li><a href="#815">Can my script control when the wrapper application quits?</a></li>
         </ul>
     </li>
 </ul>
@@ -288,7 +289,8 @@
 
 <img src="images/output_type.png" style="float: right;">
 
-<p>The <strong>Output</strong> pop-up button allows you to select what the application you create will do with the output of the Script.  There are four settings available:</p>
+<p>The <strong>Output</strong> pop-up button allows you to select what the application you create will do with the output of the Script. There are five output modes available:</p>
+
 <br>
 <p><strong>None</strong>:  Your application will provide no graphical feedback whatsoever. The application will just launch in the Dock and execute the script without opening any windows.  All script output will go to <code>STDOUT</code> and <code>STDERR</code>, viewable in Console.app.</p>
 
@@ -296,7 +298,7 @@
 
 <p><strong>Progress Bar</strong>:  A small window with an indeterminate progress bar and a "Cancel" button will appear during the execution of the script.  Script output is fed line by line into the status message above the progress bar. A small arrow to with a "Show details" option will reveal a small text field containing all script output.</p>
 
-<p>It is worth noting that the script can communicate with the progress bar and notify it of script progress.  All lines of script output with the format 'PROGRESS:\d+' (e.g. PROGRESS:75) will be interpreted as setting the completion percentage of the task.</p>
+<p>It is worth noting that the script can communicate with the progress bar and notify it of script progress.  All lines of script output with the format 'PROGRESS:\d+' (e.g. PROGRESS:75) will be interpreted as setting the completion percentage of the task. Similarly, DETAILS:SHOW and DETAILS:HIDE can be used to change the visibility of the Details text field.</p>
 
 <img src="images/output_progressbar.png">
 <br>
@@ -847,6 +849,11 @@ Contents/Resources/MainMenu.nib
 <br>
 <br>
 <br>
+
+
+<h3 id="815">Can my script control when the wrapper application quits?</h3>
+
+<p>Yes. As long as your Output Mode is not set to None, the output from your script is parsed by the wrapper application. If your script prints the string "QUITAPP\n" to STDOUT, this will make the wrapper quit.</p>
 
 <br>
 <br>
